Jun 09 2004  devel  Added BSS timestamp spoof detection - BSSTIMESTAMP alert.
                    Created "None" packet source for default config to stem
                     the new people being confused with cisco errors
                    Modified packetsource unmonitor_ code to not print warnings
                     about not leaving monitor mode cleanly if not relevant for
                     all active packetsources (ie, pcapfile and drones don't
                     warn about trying to disable rfmon)
Jun 06 2004  devel  Merged patch from Michael Scherer to fix gcc3.4 compiling
May 30 2004  devel  Fixed docs for OpenBSD
                    Merged patch from KW which should fix the problems on 64bit
                     platforms.
                    Merged patches from TZ to add more delays into monitor code
                     to make Socket CF cards happy
May 15 2004  devel  Added support for ipw2100 (Centrino) cards using the latest
                     drivers from sourceforge.
                    Merged patch from Antonio Eugenio Burriel for proper 
                     channel detection with drivers that report channel
                     number instead of frequency
May 14 2004  devel  Fixed segfault issue with too-large packets inside 
                     pcapsource.  As far as I can tell this can only be 
                     generated by a flawed driver so it shouldn't be a 
                     security issue.  Root is dropped for pcapfiles so this
                     should be safe from that angle, too.
May 13 2004  devel  See, I haven't abandoned you all, just been really busy
                    Kluged out compile errors on some vendor-modified kernels
                     that include ethtool.h in wireless.h
                    Updated config file version and took out defunct examples
                    Fixed the rest of the compile errors on some kernels, 
                     with luck