@@ -232,7 +232,7 @@ void WriteDatafiles(int in_shutdown) {
         if (tracker.FetchNumNetworks() != 0) {
             if (tracker.WriteNetworks(netlogfile) == -1) {
                 snprintf(alert, 2048, "WARNING: %s", tracker.FetchError());
-                alertracker.RaiseAlert(kissrv_aref, alert);
+                alertracker.RaiseAlert(kissrv_aref, 0, 0, 0, 0, alert);
                 //NetWriteAlert(alert);
                 if (!silent)
                     fprintf(stderr, "%s\n", alert);
@@ -247,7 +247,7 @@ void WriteDatafiles(int in_shutdown) {
         if (tracker.FetchNumNetworks() != 0) {
             if (tracker.WriteCSVNetworks(csvlogfile) == -1) {
                 snprintf(alert, 2048, "WARNING: %s", tracker.FetchError());
-                alertracker.RaiseAlert(kissrv_aref, alert);
+                alertracker.RaiseAlert(kissrv_aref, 0, 0, 0, 0, alert);
                 //NetWriteAlert(alert);
                 if (!silent)
                     fprintf(stderr, "%s\n", alert);
@@ -262,7 +262,7 @@ void WriteDatafiles(int in_shutdown) {
         if (tracker.FetchNumNetworks() != 0) {
             if (tracker.WriteXMLNetworks(xmllogfile) == -1) {
                 snprintf(alert, 2048, "WARNING: %s", tracker.FetchError());
-                alertracker.RaiseAlert(kissrv_aref, alert);
+                alertracker.RaiseAlert(kissrv_aref, 0, 0, 0, 0, alert);
                 //NetWriteAlert(alert);
                 if (!silent)
                     fprintf(stderr, "%s\n", alert);
@@ -277,7 +277,7 @@ void WriteDatafiles(int in_shutdown) {
         if (tracker.FetchNumCisco() != 0) {
             if (tracker.WriteCisco(ciscologfile) == -1) {
                 snprintf(alert, 2048, "WARNING: %s", tracker.FetchError());
-                alertracker.RaiseAlert(kissrv_aref, alert);
+                alertracker.RaiseAlert(kissrv_aref, 0, 0, 0, 0, alert);
                 //NetWriteAlert(alert);
                 if (!silent)
                     fprintf(stderr, "%s\n", alert);
